Merge testjok to develop (#1)
* Initial neccesary resources

* First try of compiling version

* review

* Compiling version with dms

* callbacks

* callbacks

* groupid

* groupid-version

* Review and icons

* jfreechart version updated (pending 1.5.5)

* review